openshift/base/trace-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-ui
  template:
    metadata:
      labels:
        app: trace-ui
    spec:
      containers:
        - name: trace-ui
          image: quay.io/rmalone/praxis-trace-ui:latest
          ports:
            - name: http
              containerPort: 8080
            - name: cpu-backend
              containerPort: 8081
            - name: gpu-backend
              containerPort: 8082
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: trace-ui-data
