openshift/base/classifier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-d-sc
spec:
  selector:
    app.kubernetes.io/name: llm-d-sc
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
      protocol: TCP
