openshift/base/openwebui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
spec:
  selector:
    app: openwebui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
