openshift/base/praxis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: praxis
spec:
  selector:
    app.kubernetes.io/name: praxis
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
