openshift/base/trace-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trace-ui
spec:
  selector:
    app: trace-ui
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: cpu-backend
      port: 8081
      targetPort: cpu-backend
    - name: gpu-backend
      port: 8082
      targetPort: gpu-backend
