openshift/base/openwebui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openwebui
spec:
  to:
    kind: Service
    name: openwebui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
