openshift/base/praxis-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: praxis
spec:
  to:
    kind: Service
    name: praxis
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
