openshift/base/trace-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: trace-ui
spec:
  to:
    kind: Service
    name: trace-ui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
